nginx-deploy-config.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /etc/nginx # mount nginx-conf volumn to /etc/nginx
              readOnly: true
              name: nginx-volume # must be same with volume
            - mountPath: /var/log/nginx
              name: log
      volumes:
        - name: nginx-volume
          configMap:
            name: nginx-conf # place ConfigMap `nginx-conf` on /etc/nginx (name must be created configmap)
            items:
              - key: nginx.conf
                path: nginx.conf
        - name: log
          emptyDir: {}
